# icoco-swig-baltik

./: .gitignore  README.md  env_for_python.sh  project.cfg
share/swig/: CMakeLists.txt  install_and_test.sh  install_only.sh  swigbaltikicoco.i
share/swig/test/: test_swigbaltikicoco.py
